스타일링: 오퍼레이터 버튼 기능에 따라 텍스트 색상 구분

--- a/style.css
+++ b/style.css
@@ -41,10 +41,12 @@ button {
 
 .op {
   background: #ced4da;
+  color: #868e96;
 }
 
 .op-main {
   font-size: 2.5em;
+  color: #343a40;
 }
 
 .op-ac {
